--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
             <a href="#" class="nav-logo">Cricket League.</a>
                 <ul class="nav-menu">
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Teams</a>
+                        <a href="#team" class="nav-link">Teams</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Players</a>
+                        <a href="#players" class="nav-link">Players</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Matches</a>
+                        <a href="#matches" class="nav-link">Matches</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Results</a>
+                        <a href="#score" class="nav-link">Results</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Venue</a>
+                        <a href="#venue" class="nav-link">Venue</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -36,7 +36,7 @@
             </nav>
     </header>    
     </section>
-    <section class="hero">
+    <section class="hero" id="hero">
         <div class="container">
             <img src="./img/cricket stadium.jpg" alt="" class="hero-img">
         </div>
@@ -45,7 +45,7 @@
             <button class="hero-btn">About Teams</button>
         </div>
     </section>
-    <section class="country">
+    <section class="country" id="country">
         <h3>Countries</h3>
         <marquee behavior="scroll" direction="left" class="countries">
                 <img src="./img/india.svg" alt="">
@@ -60,7 +60,7 @@
                 <img src="./img/italy.svg" alt="">
         </marquee>
     </section>
-    <section class="topTeams">
+    <section class="topTeams" id="team">
         <h3 class="team-text">Top Teams</h3>
         <div class="top-teams">
             <div class="team1">
@@ -80,7 +80,7 @@
             </div>
         </div>
     </section>
-    <section class="players">
+    <section class="players" id="players">
         <h3>Our Top Players</h3>
         <div class="top-players">
             <div class="player">
@@ -103,7 +103,7 @@
             </div>
         </div>
     </section>
-    <section class="upcoming-matches">
+    <section class="upcoming-matches" id="matches">
     <h3 class="matches-text">UPCOMING MATCHES</h3>
        <div class="match">
            <div class="box">
@@ -155,7 +155,7 @@
        </div>
     </section>
 
-    <section class="livematch">
+    <section class="livematch" id="score">
         <div class="live">
             <h3 class="live-match">Live Match</h3>
             <div class="lives">
@@ -167,7 +167,7 @@
             </div>
     </section>
     
-    <section class="venue">
+    <section class="venue" id="venue">
         <div class="vanue">
             <div class="newsletter">
                 <input type="text" placeholder="EMAIL">
@@ -191,7 +191,7 @@
             <p class="addd">Mon-Fri: 8am – 7pm</p>
         </div>
     </section>
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="copyright">
             <p>All copyright &copy; Reserved</p>
         </div>
